[ci skip] Add residuals vs predicted b36fc771d082094d54fdb9f95776fd677b35e933

--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e81f9621",
+   "id": "81d4355e",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "061ef961",
+   "id": "73a0ec21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba7231c2",
+   "id": "8d8f9de4",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b0c0c39",
+   "id": "a7256598",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca8932e4",
+   "id": "529f5c88",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bece925b",
+   "id": "562749b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59adc7e9",
+   "id": "28faeed4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6d915ab",
+   "id": "c32e035f",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66affa76",
+   "id": "68213b2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdaf545b",
+   "id": "28236a07",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ec2ea5b",
+   "id": "a3e68259",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e637b802",
+   "id": "2eef5390",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8927244",
+   "id": "54889945",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "228e7f28",
+   "id": "a840831f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "949636b5",
+   "id": "9e033226",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2abed17",
+   "id": "96c81406",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "812ebebc",
+   "id": "cfa8124a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "493c3247",
+   "id": "11827200",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b26015e",
+   "id": "f32aa871",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10384148",
+   "id": "368266e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82eb2829",
+   "id": "67f60671",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dd3d7d3",
+   "id": "de518cf4",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8e2ccc8",
+   "id": "a40639cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a83d0dff",
+   "id": "f14ff8ef",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aabcb4a",
+   "id": "27244b23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa66839c",
+   "id": "2c248f56",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ec8c9d5",
+   "id": "7c7633d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c541b0bb",
+   "id": "c21525d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2774a8fa",
+   "id": "851c9402",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f0e7c8b",
+   "id": "50d710fe",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ac1f9dd",
+   "id": "e1982d4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c64b8ce",
+   "id": "d511a800",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1eada4d",
+   "id": "196f11fc",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7ec7822",
+   "id": "50d197fb",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed350368",
+   "id": "cdcad595",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fdc9d4e",
+   "id": "59c8cb98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67f83316",
+   "id": "8cad48c1",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83ef1b3f",
+   "id": "0c435daa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ed00ef6",
+   "id": "5842fc4c",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bfbaf33",
+   "id": "56ef3719",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4283e65b",
+   "id": "89331d6a",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5a5cd41",
+   "id": "f8eb4744",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "034c42b2",
+   "id": "09d230bf",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2553e34d",
+   "id": "afe8e99c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c61dd84",
+   "id": "484163bf",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ce8e73b",
+   "id": "8fac43ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef90a8c6",
+   "id": "ae54a694",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e5f56c0",
+   "id": "6ff47184",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "992905a3",
+   "id": "9ab7dcae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01174edb",
+   "id": "50895803",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0676fb97",
+   "id": "20294390",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a82f491",
+   "id": "ebff6a25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,8 +1205,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b47eed3a",
-   "metadata": {},
+   "id": "e8e1f2b3",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "def plot_reliability_diagram(cv_predictions, n_bins=10):\n",
@@ -1289,7 +1291,96 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74b437bd",
+   "id": "09457850",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_residuals_vs_predicted(cv_predictions):\n",
+    "    \"\"\"Plot residuals vs predicted values scatter plot for all CV folds.\"\"\"\n",
+    "    all_scatter_plots = []\n",
+    "\n",
+    "    for i, cv_prediction in enumerate(cv_predictions):\n",
+    "        # Get date range for this CV fold\n",
+    "        min_date = cv_prediction[\"prediction_time\"].min().strftime(\"%Y-%m-%d\")\n",
+    "        max_date = cv_prediction[\"prediction_time\"].max().strftime(\"%Y-%m-%d\")\n",
+    "        fold_label = f\"#{i+1} - {min_date} to {max_date}\"\n",
+    "\n",
+    "        # Calculate residuals\n",
+    "        residuals_data = cv_prediction.with_columns(\n",
+    "            [(pl.col(\"predicted_load_mw\") - pl.col(\"load_mw\")).alias(\"residual\")]\n",
+    "        ).with_columns([pl.lit(fold_label).alias(\"fold\")])\n",
+    "\n",
+    "        # Create scatter plot for this CV fold\n",
+    "        scatter_plot = (\n",
+    "            altair.Chart(residuals_data)\n",
+    "            .mark_circle(opacity=0.6, size=20)\n",
+    "            .encode(\n",
+    "                x=altair.X(\n",
+    "                    \"predicted_load_mw:Q\",\n",
+    "                    title=\"Predicted Load (MW)\",\n",
+    "                    scale=altair.Scale(zero=False),\n",
+    "                ),\n",
+    "                y=altair.Y(\"residual:Q\", title=\"Residual (MW)\"),\n",
+    "                color=altair.Color(\"fold:N\", legend=None),\n",
+    "                tooltip=[\n",
+    "                    \"prediction_time:T\",\n",
+    "                    \"load_mw:Q\",\n",
+    "                    \"predicted_load_mw:Q\",\n",
+    "                    \"residual:Q\",\n",
+    "                    \"fold:N\",\n",
+    "                ],\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "        all_scatter_plots.append(scatter_plot)\n",
+    "\n",
+    "    # Get the range of predicted values for the perfect line\n",
+    "    all_predictions = pl.concat(\n",
+    "        [cv_pred[\"predicted_load_mw\"] for cv_pred in cv_predictions]\n",
+    "    )\n",
+    "    min_pred, max_pred = all_predictions.min(), all_predictions.max()\n",
+    "\n",
+    "    # Create perfect residuals line at y=0\n",
+    "    perfect_line = (\n",
+    "        altair.Chart(\n",
+    "            pl.DataFrame(\n",
+    "                {\n",
+    "                    \"predicted_load_mw\": [min_pred, max_pred],\n",
+    "                    \"perfect_residual\": [0, 0],\n",
+    "                    \"label\": [\"Perfect\"] * 2,\n",
+    "                }\n",
+    "            )\n",
+    "        )\n",
+    "        .mark_line(strokeDash=[5, 5], opacity=0.8, color=\"black\")\n",
+    "        .encode(\n",
+    "            x=altair.X(\"predicted_load_mw:Q\", title=\"Predicted Load (MW)\"),\n",
+    "            y=altair.Y(\"perfect_residual:Q\", title=\"Residual (MW)\"),\n",
+    "            color=altair.Color(\n",
+    "                \"label:N\",\n",
+    "                scale=altair.Scale(range=[\"black\"]),\n",
+    "                legend=None,\n",
+    "            ),\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    # Combine all scatter plots\n",
+    "    combined_scatter = all_scatter_plots[0]\n",
+    "    for plot in all_scatter_plots[1:]:\n",
+    "        combined_scatter += plot\n",
+    "\n",
+    "    # Layer the scatter plots with the perfect line\n",
+    "    return (combined_scatter + perfect_line).resolve_scale(color=\"independent\")\n",
+    "\n",
+    "\n",
+    "plot_residuals_vs_predicted(cv_predictions).interactive().properties(\n",
+    "    title=\"Residuals vs Predicted Values from cross-validation predictions\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62af311b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1425,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8e9db38",
+   "id": "5ef4f9ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1437,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff290759",
+   "id": "c586d97f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1459,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b731cf9f",
+   "id": "280b1435",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79078721",
+   "id": "b73d8a36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1753998",
+   "id": "9a783f96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1500,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb949756",
+   "id": "ed7b0c69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1516,7 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "609fff23",
+   "id": "eea131e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1542,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fc087bb",
+   "id": "a9793070",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "892fc73c",
+   "id": "d9a5e240",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,7 +1679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dfc18e3",
+   "id": "ed6d380e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1598,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a17ee7d4",
+   "id": "f947495c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1618,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e386734",
+   "id": "342b9419",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1628,7 +1719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12c2de2c",
+   "id": "30f8fdc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1640,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faa40011",
+   "id": "464c13ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f24bcc2",
+   "id": "e59c3170",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1662,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c2f5086",
+   "id": "4a65b11e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea609e32",
+   "id": "c98d8ea0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1695,7 +1786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b09a061",
+   "id": "0d0b9a17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1763,7 +1854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d53591af",
+   "id": "50d68abe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1775,7 +1866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d0a1ade",
+   "id": "88ceac00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8557674f",
+   "id": "a4973337",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1822,7 +1913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01f8ec44",
+   "id": "e6b2961d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1832,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "503fcb24",
+   "id": "df87e8cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdefc9e9",
+   "id": "b067e0c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1893,7 +1984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28ceefc1",
+   "id": "127c5510",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1905,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2308f674",
+   "id": "ac24f4d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1917,7 +2008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b06400b6",
+   "id": "640982db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1928,7 +2019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbf463b1",
+   "id": "ccc15fbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1944,7 +2035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0f16f34",
+   "id": "1aecf7e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1954,7 +2045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fa601a3",
+   "id": "baaeba5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1999,7 +2090,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3656717c",
+   "id": "b112ee10",
    "metadata": {},
    "outputs": [],
    "source": []
