--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b422cb21",
+   "id": "84cc7063",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d91d6f4f",
+   "id": "c90d3296",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4ce2e69",
+   "id": "75486e68",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b3781d1",
+   "id": "09b1c140",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6075e51b",
+   "id": "18405d0a",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "715a7e4a",
+   "id": "e21fe4f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59930fb5",
+   "id": "2c7c23d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fac6f45e",
+   "id": "bd5d4b67",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8357c101",
+   "id": "947ffe77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "358e9605",
+   "id": "986458f7",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d6ff008",
+   "id": "d78af81b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87a0fca4",
+   "id": "9040ea31",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffbe251f",
+   "id": "06dd06c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11c44e7a",
+   "id": "9d781d80",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb44c52f",
+   "id": "da16f2c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f2fa563",
+   "id": "ed71419c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23fd0ed3",
+   "id": "b8619147",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9a58f55",
+   "id": "e4a5c16c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bd6a254",
+   "id": "f7f0a7e9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51c12bc1",
+   "id": "7a983352",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e94ec4ba",
+   "id": "e62e6060",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "970af615",
+   "id": "5f76d245",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64d3566c",
+   "id": "fb4cc7f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23b13689",
+   "id": "b79127e2",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1254bd4",
+   "id": "b4122f4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b40056eb",
+   "id": "6f2be86f",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc552262",
+   "id": "8a4c1624",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2debc05e",
+   "id": "35d9251e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8fbf97a",
+   "id": "29e30b4b",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5883646",
+   "id": "093e4506",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "456e9874",
+   "id": "c41cbfbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70044770",
+   "id": "73fffaa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a37722e3",
+   "id": "099de01c",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b78a6cb",
+   "id": "d8ebd70e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbc5d821",
+   "id": "cad0fb3a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cf541a4",
+   "id": "7191df40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5705a936",
+   "id": "7bd49683",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad3ac5d2",
+   "id": "cef0e56b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2df11a0c",
+   "id": "31b34ac6",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc38d727",
+   "id": "989a6fe1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80be4124",
+   "id": "902c1a78",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "743a5dac",
+   "id": "f9fb94ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "884e94ea",
+   "id": "f0f73ebf",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f1f567a",
+   "id": "e16a3390",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e01cef4",
+   "id": "202961ad",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6039ac5e",
+   "id": "6707a342",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a2e61cf",
+   "id": "b2c4443a",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "380d2c22",
+   "id": "9f8e727e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5e835f3",
+   "id": "0cd67db2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e3374b2",
+   "id": "a210a2d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ce00a80",
+   "id": "ff32b671",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f491fee8",
+   "id": "37a1a379",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,8 +1205,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f179e798",
-   "metadata": {},
+   "id": "3d0085e3",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "def plot_reliability_diagram(cv_predictions, n_bins=10):\n",
@@ -1289,7 +1291,96 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9863cfa",
+   "id": "d3cb5d3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_residuals_vs_predicted(cv_predictions):\n",
+    "    \"\"\"Plot residuals vs predicted values scatter plot for all CV folds.\"\"\"\n",
+    "    all_scatter_plots = []\n",
+    "\n",
+    "    for i, cv_prediction in enumerate(cv_predictions):\n",
+    "        # Get date range for this CV fold\n",
+    "        min_date = cv_prediction[\"prediction_time\"].min().strftime(\"%Y-%m-%d\")\n",
+    "        max_date = cv_prediction[\"prediction_time\"].max().strftime(\"%Y-%m-%d\")\n",
+    "        fold_label = f\"#{i+1} - {min_date} to {max_date}\"\n",
+    "\n",
+    "        # Calculate residuals\n",
+    "        residuals_data = cv_prediction.with_columns(\n",
+    "            [(pl.col(\"predicted_load_mw\") - pl.col(\"load_mw\")).alias(\"residual\")]\n",
+    "        ).with_columns([pl.lit(fold_label).alias(\"fold\")])\n",
+    "\n",
+    "        # Create scatter plot for this CV fold\n",
+    "        scatter_plot = (\n",
+    "            altair.Chart(residuals_data)\n",
+    "            .mark_circle(opacity=0.6, size=20)\n",
+    "            .encode(\n",
+    "                x=altair.X(\n",
+    "                    \"predicted_load_mw:Q\",\n",
+    "                    title=\"Predicted Load (MW)\",\n",
+    "                    scale=altair.Scale(zero=False),\n",
+    "                ),\n",
+    "                y=altair.Y(\"residual:Q\", title=\"Residual (MW)\"),\n",
+    "                color=altair.Color(\"fold:N\", legend=None),\n",
+    "                tooltip=[\n",
+    "                    \"prediction_time:T\",\n",
+    "                    \"load_mw:Q\",\n",
+    "                    \"predicted_load_mw:Q\",\n",
+    "                    \"residual:Q\",\n",
+    "                    \"fold:N\",\n",
+    "                ],\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "        all_scatter_plots.append(scatter_plot)\n",
+    "\n",
+    "    # Get the range of predicted values for the perfect line\n",
+    "    all_predictions = pl.concat(\n",
+    "        [cv_pred[\"predicted_load_mw\"] for cv_pred in cv_predictions]\n",
+    "    )\n",
+    "    min_pred, max_pred = all_predictions.min(), all_predictions.max()\n",
+    "\n",
+    "    # Create perfect residuals line at y=0\n",
+    "    perfect_line = (\n",
+    "        altair.Chart(\n",
+    "            pl.DataFrame(\n",
+    "                {\n",
+    "                    \"predicted_load_mw\": [min_pred, max_pred],\n",
+    "                    \"perfect_residual\": [0, 0],\n",
+    "                    \"label\": [\"Perfect\"] * 2,\n",
+    "                }\n",
+    "            )\n",
+    "        )\n",
+    "        .mark_line(strokeDash=[5, 5], opacity=0.8, color=\"black\")\n",
+    "        .encode(\n",
+    "            x=altair.X(\"predicted_load_mw:Q\", title=\"Predicted Load (MW)\"),\n",
+    "            y=altair.Y(\"perfect_residual:Q\", title=\"Residual (MW)\"),\n",
+    "            color=altair.Color(\n",
+    "                \"label:N\",\n",
+    "                scale=altair.Scale(range=[\"black\"]),\n",
+    "                legend=None,\n",
+    "            ),\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    # Combine all scatter plots\n",
+    "    combined_scatter = all_scatter_plots[0]\n",
+    "    for plot in all_scatter_plots[1:]:\n",
+    "        combined_scatter += plot\n",
+    "\n",
+    "    # Layer the scatter plots with the perfect line\n",
+    "    return (combined_scatter + perfect_line).resolve_scale(color=\"independent\")\n",
+    "\n",
+    "\n",
+    "plot_residuals_vs_predicted(cv_predictions).interactive().properties(\n",
+    "    title=\"Residuals vs Predicted Values from cross-validation predictions\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e4d54e9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1425,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c83a17da",
+   "id": "e31c9c1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1437,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63e56375",
+   "id": "e1f89577",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1459,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0361d2b",
+   "id": "6ec4e3f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94f5fd9e",
+   "id": "478d4830",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38e3e5e9",
+   "id": "dba471f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1500,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ea39a06",
+   "id": "a84798d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1516,7 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30813ec4",
+   "id": "d8fed35e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1542,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "640a135d",
+   "id": "5838603f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e79497e8",
+   "id": "d43b4a51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,7 +1679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a0f2846",
+   "id": "0775fb4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1598,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61194526",
+   "id": "857e1a13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1618,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1874b2f2",
+   "id": "b9174fe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1628,7 +1719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2949b77",
+   "id": "57dccd24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1640,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03119df8",
+   "id": "2fefd265",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53fbf991",
+   "id": "60687e24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1662,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a52d535",
+   "id": "dbc731bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f97f4481",
+   "id": "120f190c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1695,7 +1786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcf66288",
+   "id": "0d16f9a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1763,7 +1854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a5c38f7",
+   "id": "28f4c82d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1775,7 +1866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b714f7f3",
+   "id": "ee27e0b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb5afacc",
+   "id": "a10345c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1822,7 +1913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "919949c6",
+   "id": "ba15a8ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1832,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4447e4f2",
+   "id": "82c856a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ed34822",
+   "id": "a47b6bcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1893,7 +1984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c98d9701",
+   "id": "1e6bda0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1905,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "810855b2",
+   "id": "0292e741",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1917,7 +2008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e211617",
+   "id": "97d6b624",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1928,7 +2019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b022a4f0",
+   "id": "a67c39ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1944,7 +2035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "435c5e7c",
+   "id": "7da84a6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1954,7 +2045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "517fc7a6",
+   "id": "eb895c21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1999,7 +2090,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f753170f",
+   "id": "be3e5120",
    "metadata": {},
    "outputs": [],
    "source": []
